Update to workflows, improvement to tool calling etc.
